--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,28 @@
     <groupId>org.helix.fish</groupId>
     <artifactId>helix-fish-security-uaa</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <!-- Spring Boot -->
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.4.1</version>
+    </parent>
 
 
+    <dependencies>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <!--Spring Boot Maven Plugin -->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
