--- a/pom.xml
+++ b/pom.xml
@@ -7,19 +7,31 @@
     <groupId>org.helix.fish</groupId>
     <artifactId>helix-fish-security-uaa</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <spring-cloud.version>2020.0.4</spring-cloud.version>
+    </properties>
     <!-- Spring Boot -->
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.1</version>
+        <version>2.5.5</version>
     </parent>
 
 
     <dependencies>
-    <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-web</artifactId>
-    </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-dependencies</artifactId>
+            <version>${spring-cloud.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
