--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,8 @@
     <artifactId>helix-fish-security-uaa</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
-        <spring-cloud.version>2020.0.4</spring-cloud.version>
+        <spring.cloud.version>2020.0.4</spring.cloud.version>
+        <spring.cloud.security.version>2.2.5.RELEASE</spring.cloud.security.version>
     </properties>
     <!-- Spring Boot -->
     <parent>
@@ -27,19 +28,15 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-dependencies</artifactId>
-            <version>${spring-cloud.version}</version>
+            <version>${spring.cloud.version}</version>
             <type>pom</type>
             <scope>import</scope>
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-oauth2</artifactId>
+            <version>${spring.cloud.security.version}</version>
         </dependency>
 
     </dependencies>
