1,change the Spring Security OAuth2.0 correct maven dependency

--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,9 @@
     <groupId>org.helix.fish</groupId>
     <artifactId>helix-fish-security-uaa</artifactId>
     <version>1.0-SNAPSHOT</version>
+
     <properties>
+        <java.version>1.8</java.version>
         <spring.cloud.version>2020.0.4</spring.cloud.version>
         <spring.cloud.security.version>2.2.5.RELEASE</spring.cloud.security.version>
     </properties>
@@ -26,20 +28,28 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-dependencies</artifactId>
-            <version>${spring.cloud.version}</version>
-            <type>pom</type>
-            <scope>import</scope>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-oauth2</artifactId>
-            <version>${spring.cloud.security.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
         </dependency>
-
     </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <plugins>
