--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.helix.fish</groupId>
-    <artifactId>helix-fish-security-uaa</artifactId>
+    <artifactId>helix-fish-security-uaa-auth-server</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
