--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,10 @@
             <artifactId>commons-pool2</artifactId>
             <version>${commons-pool.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
 
 
         <dependency>
